Add event for menu and styles for mobile :)

--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script
+      src="https://kit.fontawesome.com/b7301c403c.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
